--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1",
-    "react-native-svg": "^12.1.1"
+    "react-test-renderer": "17.0.1"
   },
   "jest": {
     "preset": "react-native"
